JumpScript/tests/baselines/reference/anyDeclare.errors.txt
tests/cases/compiler/anyDeclare.jump(3,9): error TS2300: Duplicate identifier 'myFn'.
tests/cases/compiler/anyDeclare.jump(4,14): error TS2300: Duplicate identifier 'myFn'.


==== tests/cases/compiler/anyDeclare.jump (2 errors) ====
    declare var x: any;
    module myMod {
        var myFn;
            ~~~~
!!! error TS2300: Duplicate identifier 'myFn'.
        function myFn() {  }
                 ~~~~
!!! error TS2300: Duplicate identifier 'myFn'.
    }
    